--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  <title>IFisica</title>
+  <title>Organizador do IF</title>
   <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
@@ -59,7 +59,7 @@
     <h2 style = "text-align: center;" class="mb-4">Escolha um curso:</h2>
     <button class="collapsible">Ciência da Computação</button>
       <div class="content" style = "margin-left: 50px;">
-        <a href="https://organizadorif.github.io/COMP4/"><p>TESTE</p></a>
+        <a href="https://organizadorif.github.io/COMP4/"><p><b>COMP4</b></p></a>
       </div>
   </div>
 
