--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <title>Organizador do IF</title>
   <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <style>
 
 .collapsible {
-  background-color: #cce6ff;
+  background-color: #a8eba7;
   color: #444;
   cursor: pointer;
   padding: 18px;
@@ -53,11 +54,12 @@
 }
   
 </style>
-<body>
+<body style="background-color:#e6ffe6;">
+
   
-  <div class="container mt-5">
-    <h2 style = "text-align: center;" class="mb-4">Escolha um curso:</h2>
-    <button class="collapsible">Ciência da Computação</button>
+  <div class="container mt-5" style="width: 500px;">
+    <h2 style = "text-align: center;" class="mb-4">Escolha uma turma:</h2>
+    <button class="collapsible"><b>Ciência da Computação</b></button>
       <div class="content" style = "margin-left: 50px;">
         <a href="https://organizadorif.github.io/COMP4/"><p><b>COMP4</b></p></a>
       </div>
