--- a/index.html
+++ b/index.html
@@ -56,12 +56,20 @@
 </style>
 <body style="background-color:#e6ffe6;">
 
+  <div class="container mt-5" style="width: 700px;">
+    <h1 style = "text-align: center; margin-bottom: 20px;">Olá!</h1>
+    <h2 style = "text-align: center; margin-bottom: 40px;">Seja bem-vindo(a) ao Organizador do IF!</h2>
+    <h3 style = "text-align: center;" class="mb-4">Escolha uma turma para continuar:</h3>
+  </div>
   
-  <div class="container mt-5" style="width: 500px;">
-    <h2 style = "text-align: center;" class="mb-4">Escolha uma turma:</h2>
+  <div class="container" style="width: 500px;">
     <button class="collapsible"><b>Ciência da Computação</b></button>
       <div class="content" style = "margin-left: 50px;">
         <a href="https://organizadorif.github.io/COMP4/"><p><b>COMP4</b></p></a>
+      </div>
+    <button class="collapsible"><b>Biologia</b></button>
+      <div class="content" style = "margin-left: 50px;">
+        <a href="https://organizadorif.github.io/COMP4/"><p><b>CBIO5</b></p></a>
       </div>
   </div>
 
