--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 </style>
 <body style="background-color:#e6ffe6;">
 
-  <div class="container mt-5" style="width: 700px;">
+  <div class="container mt-5"">
     <h1 style = "text-align: center; margin-bottom: 20px;">Olá!</h1>
     <h2 style = "text-align: center; margin-bottom: 40px;">Seja bem-vindo(a) ao Organizador do IF!</h2>
     <h3 style = "text-align: center;" class="mb-4">Escolha uma turma para continuar:</h3>
   </div>
   
-  <div class="container" style="width: 500px;">
+  <div class="container" style="max-width: 500px;">
     <button class="collapsible"><b>Ciência da Computação</b></button>
       <div class="content" style = "margin-left: 50px;">
         <a href="https://organizadorif.github.io/COMP4/"><p><b>COMP4</b></p></a>
