--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   <title>Organizador do IF</title>
-  <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
+  <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body style="background-color:#e6ffe6;">
 
   <div class="container mt-5"">
+    <img src = "/static/images/ifmuzlogo.png" width = "100%"> 
     <h1 style = "text-align: center; margin-bottom: 20px;">Olá!</h1>
     <h2 style = "text-align: center; margin-bottom: 40px;">Seja bem-vindo(a) ao Organizador do IF!</h2>
     <h3 style = "text-align: center;" class="mb-4">Escolha uma turma para continuar:</h3>
