--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   <title>Organizador do IF</title>
   <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -12,9 +11,9 @@
 <body style="background-color:#e6ffe6;">
 
   <div class="container mt-5"">
-    <img src = "/static/images/ifmuzlogo.png" width = "100%"> 
+    <div style = "text-align: center; margin-bottom: 30px;"><img src="/static/images/ifmuzlogo.png" width = "70%"></div>
     <h1 style = "text-align: center; margin-bottom: 20px;">Olá!</h1>
-    <h2 style = "text-align: center; margin-bottom: 40px;">Seja bem-vindo(a) ao Organizador do IF!</h2>
+    <h2 style = "text-align: center; margin-bottom: 40px;">Seja bem-vindo(a) ao <b>Organizador do IF!</b></h2>
     <h3 style = "text-align: center;" class="mb-4">Escolha uma turma para continuar:</h3>
   </div>
   
