--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="content" style = "margin-left: 30px;">
         <a href="https://organizadorif.github.io/COMP4/"><p><b>COMP4</b></p></a>
       </div>
-    <button class="collapsible"><b>Biologia</b></button>
+    <button class="collapsible"><b>Ciências Biológicas</b></button>
       <div class="content" style = "margin-left: 30px;">
         <a href="https://organizadorif.github.io/COMP4/"><p><b>CBIO5</b></p></a>
       </div>
