--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     <button class="collapsible"><b>Ciências Biológicas</b></button>
       <div class="content" style = "margin-left: 30px;">
-        <a href="https://organizadorif.github.io/COMP4/"><p><b>CBIO5</b></p></a>
+        <a href="https://organizadorif.github.io/CBIO6/"><p><b>CBIO6</b></p></a>
       </div>
   </div>
 
